[package]
name = "gnoll-roll"
version = "0.1.0"
authors = ["hyena <hyena@users.noreply.github.com>"]
edition = "2018"
description = "An opensource discord roll bot."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
pest = "2.0"
pest_derive = "2.0"
rand = "0.6"
serenity = "0.7"
